# insuranceCalc_ms_deployment

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: e2e-tests.yml
tests/: conftest.py  test_e2e.py
