[project]
name = "insurancecalc-ms-deployment"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Filippov",email = "jam089@mail.ru"}
]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
testcontainers = ">=4.13.2,<5.0.0"
pytest = ">=8.4.2,<9.0.0"
mypy = ">=1.18.2,<2.0.0"
ruff = ">=0.14.1,<0.15.0"
httpx = ">=0.28.1,<0.29.0"
pytest-asyncio = ">=1.2.0,<2.0.0"
black = ">=25.9.0,<26.0.0"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "app",
]
markers = [
    "e2e: mark tests as e2e tests",
]


[tool.mypy]
python_version = 3.12
#plugins = [
#    'pydantic.mypy',
#    "sqlalchemy.ext.mypy.plugin",
#    ]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
#    "UP",
    "B",
    "SIM"
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
